--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -70,7 +70,7 @@
                 Cotação
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" sec:authorize="hasRole('MANAGER')" th:href="@{/cotacoes/cadastrar}">Cotar</a></li>
+                <li><a class="dropdown-item" sec:authorize="hasRole('MANAGER')" th:href="@{/cotacoes/cadastrar}">Cotação</a></li>
                 <li><a class="dropdown-item"  th:href="@{/cotacoes/por-data}">Consultar</a></li>
                 <li><a class="dropdown-item" sec:authorize="hasRole('MANAGER')"  th:href="@{/cotacoes/editar}">Editar</a></li>
               </ul>
