--- a/src/main/resources/templates/feira/feira_cadastro.html
+++ b/src/main/resources/templates/feira/feira_cadastro.html
@@ -28,11 +28,11 @@
         <form th:action="@{/feiras/pesquisar}" method="get" class="row g-3 align-items-end mb-3">
             <div class="col-auto">
                 <label for="dataInicio" class="col-form-label" style="font-size: 0.8rem;">Data Início:</label>
-                <input type="date" class="form-control form-control-sm" id="dataInicio" name="dataInicio" required>
+                <input type="date" class="form-control form-control-sm" id="dataInicio" name="dataInicio" th:value="${dataInicio}" required>
             </div>
             <div class="col-auto">
                 <label for="dataFim" class="col-form-label" style="font-size: 0.8rem;">Data Fim:</label>
-                <input type="date" class="form-control form-control-sm" id="dataFim" name="dataFim" required>
+                <input type="date" class="form-control form-control-sm" id="dataFim" name="dataFim" th:value="${dataFim}" required>
             </div>
             <div class="col-auto">
                 <button type="submit" class="btn btn-primary btn-sm">Pesquisar</button>
@@ -55,7 +55,18 @@
                         <input type="date" class="form-control" id="dataFeira"
                                th:field="*{dataFeira}" required autofocus="autofocus" />
                     </div>
-                   
+                    <div class="col-md-4">
+                        <label for="numero" class="form-label">Número da Feira</label>
+                        <input type="text" class="form-control" id="numero"
+                               th:field="*{numero}" required />
+                    </div>
+                    <div class="col-md-4">
+                        <label for="statusFeira" class="form-label">Status da Feira</label>
+                        <select class="form-select" id="statusFeira" th:field="*{statusFeira}" required>
+                            <option th:each="status : ${T(enums.StatusFeira).values()}"
+                                    th:value="${status}" th:text="${status}"></option>
+                        </select>
+                    </div>
                     <div class="col-md-4 align-self-end">
                         <input type="hidden" id="id" th:field="*{id}" />
                         <button type="submit" class="btn btn-primary btn-sm" style="margin-top: 20px;">
@@ -111,10 +122,10 @@
         <!-- Paginação -->
         <div th:if="${feiraPage}">
             <span th:if="${feiraPage.hasPrevious()}">
-                <a th:href="@{/feiras/pesquisar(dataInicio=${param.dataInicio}, dataFim=${param.dataFim}, page=${feiraPage.number - 1})}">Anterior</a>
+                <a th:href="@{/feiras/pesquisar(dataInicio=${dataInicio}, dataFim=${dataFim}, page=${feiraPage.number - 1})}">Anterior</a>
             </span>
             <span th:if="${feiraPage.hasNext()}">
-                <a th:href="@{/feiras/pesquisar(dataInicio=${param.dataInicio}, dataFim=${param.dataFim}, page=${feiraPage.number + 1})}">Próxima</a>
+                <a th:href="@{/feiras/pesquisar(dataInicio=${dataInicio}, dataFim=${dataFim}, page=${feiraPage.number + 1})}">Próxima</a>
             </span>
         </div>
         <br><br>
