Pronto para iniciar Publicar Feira

--- a/src/main/resources/templates/cotacao/cotacao_listagemdata.html
+++ b/src/main/resources/templates/cotacao/cotacao_listagemdata.html
@@ -34,7 +34,7 @@
 					<br>
 					<div class="meu-hr">
 						Pesquisa de Cotações por Data
-
+						<a th:href="@{/feiras/cadastrar}" class="btn btn-secondary btn-sm" style="margin-top: 20px;">Voltar para feiras</a>
 						<hr>
 					</div>
 					<div th:replace="~{alert}"></div>
@@ -124,7 +124,7 @@
 		</table>
 
 
-		<a class="inicio" th:href="@{/}">INICIO</a>
+		
 	</div>
 
 	<!-- Adicione links de paginação ou outros elementos conforme necessário -->
