--- a/src/main/resources/templates/cotacao/cotacao_por_feira.html
+++ b/src/main/resources/templates/cotacao/cotacao_por_feira.html
@@ -48,7 +48,7 @@
 		</div>
 
 		<div class="meu-hr">Resultados da Pesquisa</div>
-
+		<a th:href="@{/feiras/cadastrar}" class="btn btn-secondary btn-sm" style="margin-top: 20px;">Voltar para feiras</a>
 		<table class="table table-bordered">
 			<thead>
 				<tr>
